fix squishiness of modal

--- a/app/assets/stylesheets/save_badge_modal.scss
+++ b/app/assets/stylesheets/save_badge_modal.scss
@@ -1,13 +1,12 @@
 #save-badge-modal {
-  width: 50%;
-  height: 60%;
+  width: 50rem;
   border-radius: 10px;
   background-color: white;
   opacity: 0;
   position: fixed;
   padding: 3rem;
   top: 100%;
-  left: 25%;
+  left: 20%;
   transition: top 0.5s cubic-bezier(0,.97,.11,1.2),
   opacity 0.4s ease-out;
 
@@ -23,7 +22,7 @@
     align-items: flex-start;
     gap: 2rem;
     height: 100%;
-    padding: 3rem 5rem;
+    padding: 1rem 5rem;
 
     .badge-wrap {
       align-self: center;
